chore(lint): Make `yarn lint` lint both the FW and CRWRSCA

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "clean:prisma": "rimraf node_modules/.prisma/client && node node_modules/@prisma/client/scripts/postinstall.js",
     "e2e": "node ./tasks/run-e2e",
     "generate-dependency-graph": "node ./tasks/generateDependencyGraph.mjs",
-    "lint": "RWJS_CWD=packages/create-redwood-app/templates/ts eslint --config .eslintrc.js --ignore-pattern Routes.jsx --ignore-pattern create-redwood-rsc-app packages",
+    "lint": "concurrently -c auto npm:lint:fw npm:lint:crwrsca",
+    "lint:crwrsca": "yarn --cwd packages/create-redwood-rsc-app run lint",
+    "lint:fw": "RWJS_CWD=packages/create-redwood-app/templates/ts eslint --config .eslintrc.js --ignore-pattern Routes.jsx --ignore-pattern create-redwood-rsc-app packages",
     "lint:fix": "yarn lint --fix",
     "project:copy": "node ./tasks/framework-tools/frameworkFilesToProject.mjs",
     "project:deps": "node ./tasks/framework-tools/frameworkDepsToProject.mjs",
@@ -82,6 +84,7 @@
     "babel-plugin-auto-import": "1.1.0",
     "babel-plugin-remove-code": "0.0.6",
     "boxen": "5.1.2",
+    "concurrently": "8.2.2",
     "core-js": "3.37.1",
     "cypress": "13.13.1",
     "cypress-fail-fast": "7.1.0",
