--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "!packages/create-redwood-rsc-app"
   ],
   "scripts": {
-    "build": "nx run-many -t build",
+    "build": "nx run-many -t build && yarn build:crwrsca",
+    "build:crwrsca": "yarn --cwd packages/create-redwood-rsc-app build",
     "build:clean": "node ./tasks/clean.mjs",
     "build:clean:super": "git clean -fdx && yarn && yarn build",
     "build:pack": "nx run-many -t build:pack",
@@ -24,6 +25,10 @@
     "clean:prisma": "rimraf node_modules/.prisma/client && node node_modules/@prisma/client/scripts/postinstall.js",
     "e2e": "node ./tasks/run-e2e",
     "generate-dependency-graph": "node ./tasks/generateDependencyGraph.mjs",
+    "install:all": "concurrently -g -c auto -n install:fw \"yarn install\" npm:install:crwrsca",
+    "install:ci": "concurrently -g -c auto -n install:fw:ci \"yarn install --inline-builds\" npm:install:crwrsca:ci",
+    "install:crwrsca": "yarn --cwd packages/create-redwood-rsc-app install",
+    "install:crwrsca:ci": "yarn --cwd packages/create-redwood-rsc-app install --inline-builds",
     "lint": "concurrently -c auto npm:lint:fw npm:lint:crwrsca",
     "lint:crwrsca": "yarn --cwd packages/create-redwood-rsc-app run lint",
     "lint:fw": "RWJS_CWD=packages/create-redwood-app/templates/ts eslint --config .eslintrc.js --ignore-pattern Routes.jsx --ignore-pattern create-redwood-rsc-app packages",
