--- a/.github/actions/set-up-job/action.yml
+++ b/.github/actions/set-up-job/action.yml
@@ -53,7 +53,7 @@ runs:
       working-directory: ${{ inputs.yarn-install-directory }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
-      run: yarn install:ci
+      run: yarn install --inline-builds && yarn --cwd packages/create-redwood-rsc-app install --inline-builds
 
     - name: 🏗️ Build
       if: inputs.build == 'true'
