--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "install:ci": "concurrently -g -c auto -n install:fw:ci \"yarn install --inline-builds\" npm:install:crwrsca:ci",
     "install:crwrsca": "yarn --cwd packages/create-redwood-rsc-app install",
     "install:crwrsca:ci": "yarn --cwd packages/create-redwood-rsc-app install --inline-builds",
-    "lint": "concurrently -c auto npm:lint:fw npm:lint:crwrsca",
+    "lint": "yarn lint:fw && yarn lint:crwrsca",
+    "lint:c": "concurrently -c auto npm:lint:fw npm:lint:crwrsca",
     "lint:crwrsca": "yarn --cwd packages/create-redwood-rsc-app run lint",
     "lint:fw": "RWJS_CWD=packages/create-redwood-app/templates/ts eslint --config .eslintrc.js --ignore-pattern Routes.jsx --ignore-pattern create-redwood-rsc-app packages",
     "lint:fix": "yarn lint --fix",
