--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint": "yarn lint:fw && yarn lint:crwrsca",
     "lint:c": "concurrently -c auto npm:lint:fw npm:lint:crwrsca",
     "lint:crwrsca": "yarn --cwd packages/create-redwood-rsc-app run lint",
-    "lint:fw": "RWJS_CWD=packages/create-redwood-app/templates/ts eslint --config .eslintrc.js --ignore-pattern Routes.jsx --ignore-pattern create-redwood-rsc-app packages",
+    "lint:fw": "cross-env RWJS_CWD=packages/create-redwood-app/templates/ts eslint --config .eslintrc.js --ignore-pattern Routes.jsx --ignore-pattern create-redwood-rsc-app packages",
     "lint:fix": "yarn lint --fix",
     "project:copy": "node ./tasks/framework-tools/frameworkFilesToProject.mjs",
     "project:deps": "node ./tasks/framework-tools/frameworkDepsToProject.mjs",
@@ -92,6 +92,7 @@
     "boxen": "5.1.2",
     "concurrently": "8.2.2",
     "core-js": "3.37.1",
+    "cross-env": "7.0.3",
     "cypress": "13.13.1",
     "cypress-fail-fast": "7.1.0",
     "cypress-wait-until": "3.0.2",
