--- a/packages/create-redwood-rsc-app/package.json
+++ b/packages/create-redwood-rsc-app/package.json
@@ -17,7 +17,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsx build.ts",
     "check": "concurrently yarn:knip yarn:publint",
     "check:knip": "knip",
     "check:package": "publint",
@@ -40,12 +40,15 @@
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@eslint/js": "^9.7.0",
     "@types/eslint-plugin-markdown": "^2.0.2",
+    "@types/eslint__js": "^8.42.3",
+    "@types/fs-extra": "^11",
     "@types/semver": "7.5.8",
     "@types/which": "3.0.4",
     "@types/yauzl-promise": "4.0.1",
     "@vitest/coverage-v8": "^2.0.3",
     "concurrently": "^8.2.2",
     "console-fail-test": "^0.4.4",
+    "esbuild": "0.23.0",
     "eslint": "^9.7.0",
     "eslint-plugin-jsdoc": "^48.7.0",
     "eslint-plugin-jsonc": "^2.16.0",
@@ -56,6 +59,8 @@
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-yml": "^1.14.0",
+    "fast-glob": "3.3.2",
+    "fs-extra": "11.2.0",
     "jsonc-eslint-parser": "^2.4.0",
     "knip": "^5.26.0",
     "prettier": "^3.3.3",
@@ -63,7 +68,6 @@
     "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-sh": "^0.14.0",
     "publint": "^0.2.9",
-    "tsup": "^8.2.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.1",
