Switch to tstyche

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -23,8 +23,7 @@
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
-    "test:unit": "vitest --project regular run",
-    "test:types": "vitest --project typetests run",
+    "test:types": "tstyche",
     "test:watch": "vitest"
   },
   "dependencies": {
@@ -32,6 +31,7 @@
   },
   "devDependencies": {
     "@redwoodjs/project-config": "workspace:*",
+    "tstyche": "2.1.0",
     "tsx": "4.16.2",
     "typescript": "5.5.4",
     "vitest": "2.0.4"
