--- a/packages/create-redwood-rsc-app/package.json
+++ b/packages/create-redwood-rsc-app/package.json
@@ -4,12 +4,12 @@
   "description": "Quickstart for a RedwoodJS React Server Components App",
   "repository": {
     "type": "git",
-    "url": "https://github.com/redwoodjs/redwood.git",
+    "url": "git+https://github.com/redwoodjs/redwood.git",
     "directory": "packages/create-redwood-rsc-app"
   },
   "license": "MIT",
   "type": "module",
-  "bin": "./dist/index.js",
+  "bin": "dist/index.js",
   "files": [
     "dist/",
     "package.json",
