chore(kitchen-sink): Disable test and stories generation

--- a/__fixtures__/test-project-rsc-kitchen-sink/redwood.toml
+++ b/__fixtures__/test-project-rsc-kitchen-sink/redwood.toml
@@ -20,6 +20,10 @@
 [notifications]
   versionUpdates = ["latest"]
 
+[generate]
+  tests = false
+  stories = false
+
 [experimental.streamingSsr]
   enabled = true
 
