--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "dependency-cruiser": "16.3.10",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
+    "eslint-plugin-unused-imports": "3.2.0",
     "execa": "5.1.1",
     "fast-glob": "3.3.2",
     "fs-extra": "11.2.0",
