Disable TSC errors for unused params and locals.

--- a/tsconfig.compilerOption.json
+++ b/tsconfig.compilerOption.json
@@ -9,9 +9,9 @@
     "composite": true,
     "strict": true,
     "esModuleInterop": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "jsx": "preserve",
     "skipLibCheck": true,
