--- a/tsconfig.compilerOption.json
+++ b/tsconfig.compilerOption.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noImplicitReturns": false,
+    "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "jsx": "preserve",
     "skipLibCheck": true,
