--- a/__fixtures__/rsc-caching/package.json
+++ b/__fixtures__/rsc-caching/package.json
@@ -24,6 +24,6 @@
   "resolutions": {
     "@apollo/client-react-streaming/superjson": "^1.12.2",
     "@apollo/client/rehackt": "0.1.0",
-    "react-is": "19.0.0-beta-04b058868c-20240508"
+    "react-is": "19.0.0-rc-8269d55d-20240802"
   }
 }
