--- a/__fixtures__/rsc-caching/web/package.json
+++ b/__fixtures__/rsc-caching/web/package.json
@@ -20,8 +20,8 @@
     "@redwoodjs/web": "8.0.0-canary.1102",
     "@tobbe.dev/rsc-test": "0.0.5",
     "client-only": "0.0.1",
-    "react": "19.0.0-beta-04b058868c-20240508",
-    "react-dom": "19.0.0-beta-04b058868c-20240508"
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-dom": "19.0.0-rc-8269d55d-20240802"
   },
   "devDependencies": {
     "@redwoodjs/vite": "8.0.0-canary.1102",
