--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -88,7 +88,7 @@
   },
   "dependencies": {
     "core-js": "3.37.1",
-    "react": "19.0.0-beta-04b058868c-20240508"
+    "react": "19.0.0-rc-8269d55d-20240802"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "0.15.3",
