--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -87,8 +87,8 @@
     "fs-extra": "11.2.0",
     "http-proxy-middleware": "3.0.0",
     "isbot": "5.1.13",
-    "react": "19.0.0-beta-04b058868c-20240508",
-    "react-server-dom-webpack": "19.0.0-beta-04b058868c-20240508",
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-server-dom-webpack": "19.0.0-rc-8269d55d-20240802",
     "rimraf": "6.0.1",
     "vite": "5.3.5",
     "vite-plugin-cjs-interop": "2.1.1",
