--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -172,16 +172,16 @@
     "concurrently": "8.2.2",
     "nodemon": "3.1.4",
     "publint": "0.2.9",
-    "react": "19.0.0-beta-04b058868c-20240508",
-    "react-dom": "19.0.0-beta-04b058868c-20240508",
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-dom": "19.0.0-rc-8269d55d-20240802",
     "tstyche": "2.1.0",
     "tsx": "4.16.2",
     "typescript": "5.5.4",
     "vitest": "2.0.4"
   },
   "peerDependencies": {
-    "react": "19.0.0-beta-04b058868c-20240508",
-    "react-dom": "19.0.0-beta-04b058868c-20240508"
+    "react": "19.0.0-rc-8269d55d-20240802",
+    "react-dom": "19.0.0-rc-8269d55d-20240802"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
 }
