--- a/packages/uploads/package.json
+++ b/packages/uploads/package.json
@@ -26,7 +26,8 @@
     "build:types-cjs": "tsc --build --verbose tsconfig.types-cjs.json",
     "check:attw": "tsx attw.ts",
     "check:package": "concurrently npm:check:attw yarn publint",
-    "test": "vitest run",
+    "setup:test": "npx prisma migrate reset -f --schema src/__tests__/unit-test-schema.prisma",
+    "test": "yarn run setup:test && vitest run",
     "test:watch": "vitest watch"
   },
   "dependencies": {
