--- a/packages/uploads/tsconfig.json
+++ b/packages/uploads/tsconfig.json
@@ -9,5 +9,11 @@
   },
   "include": ["src"],
   "references": [
+    {
+      "path": "../project-config"
+    },
+    {
+      "path": "../framework-tools"
+    },
   ]
 }
