--- a/packages/uploads/package.json
+++ b/packages/uploads/package.json
@@ -33,8 +33,8 @@
     "check:attw": "tsx attw.ts",
     "check:package": "concurrently npm:check:attw yarn publint",
     "setup:test": "npx prisma migrate reset -f --schema src/__tests__/unit-test-schema.prisma",
-    "test": "yarn run setup:test && vitest run",
-    "test:watch": "yarn run setup:test && vitest watch"
+    "test": "vitest run",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@redwoodjs/project-config": "workspace:*",
