--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -51,7 +51,7 @@
     "inject"
   ],
   "scripts": {
-    "build": "tsx build.mts && yarn build:types",
+    "build": "tsx build.ts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-vite.tgz",
     "build:types": "tsc --build --verbose ./tsconfig.json",
     "check:attw": "tsx ./attw.ts",
