chore(ci): Print full diff when check-test-project-fixture fails

--- a/.github/workflows/check-test-project-fixture.yml
+++ b/.github/workflows/check-test-project-fixture.yml
@@ -69,6 +69,9 @@ jobs:
             echo 'Untracked files:'
             git status --porcelain | grep '^?? ' | awk '{print "        " $2}'
             echo
+            echo
+            echo 'Full diff:'
+            git diff
             exit 1;
           fi
 
