--- a/packages/auth-providers/supabase/middleware/tsconfig.json
+++ b/packages/auth-providers/supabase/middleware/tsconfig.json
@@ -10,6 +10,6 @@
   "include": ["src/**/*"],
   "references": [
     { "path": "../../../auth/tsconfig.build.json" },
-    { "path": "../../../vite" }
+    { "path": "../../../vite/tsconfig.build.json" }
   ]
 }
