--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext"
   },
   "include": ["src/**/*"],
   "references": [
