--- a/packages/create-redwood-app/templates/js/web/jsconfig.json
+++ b/packages/create-redwood-app/templates/js/web/jsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "noEmit": true,
     "esModuleInterop": true,
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
+    "target": "ES2023",
+    "module": "ES2022",
+    "moduleResolution": "Bundler",
     "skipLibCheck": false,
     "rootDirs": [
       "./src",
