--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
       - name: 🔍 Detect changes
         id: detect-changes
         uses: ./.github/actions/detect-changes
+        with:
+          labels: '{ "labels": ${{ toJSON(github.event.pull_request.labels) }} }'
 
   check:
     needs: detect-changes
