--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -146,7 +146,7 @@
     "@redwoodjs/auth": "workspace:*",
     "@redwoodjs/server-store": "workspace:*",
     "@whatwg-node/fetch": "0.9.19",
-    "apollo-upload-client": "^18.0.1",
+    "apollo-upload-client": "18.0.1",
     "core-js": "3.37.1",
     "graphql": "16.9.0",
     "graphql-sse": "2.5.3",
