--- a/packages/cli/src/commands/generate/job/templates/job.ts.template
+++ b/packages/cli/src/commands/generate/job/templates/job.ts.template
@@ -3,6 +3,6 @@ import { jobs } from 'src/lib/jobs'
 export const ${name}Job = jobs.createJob({
   queue: '${queueName}',
   perform: async () => {
-    // job implementation here
+    jobs.logger.info('${name}Job is performing...')
   }
 })
