add prettier to vscode extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,9 @@
 {
   "recommendations": [
     "EditorConfig.EditorConfig",
-    "dbaeumer.vscode-eslint",
-    "mgmcdermott.vscode-language-babel"
+    "dbaeumer.vscode-eslint", // eslint
+    "mgmcdermott.vscode-language-babel", // babel
+    "esbenp.prettier-vscode", // prettier
   ],
   "unwantedRecommendations": [
     "johnpapa.vscode-peacock" // not used, still tries to apply it's settings
