switch to json and add plugins

--- a/package.json
+++ b/package.json
@@ -116,6 +116,9 @@
     "nx": "19.5.7",
     "ora": "8.0.1",
     "prettier": "3.3.3",
+    "prettier-plugin-curly": "0.2.2",
+    "prettier-plugin-packagejson": "2.5.1",
+    "prettier-plugin-sh": "0.14.0",
     "prompts": "2.4.2",
     "rimraf": "6.0.1",
     "tstyche": "2.1.1",
