chore(lint): Split linting and formatting (#11246)
This change splits out prettier from eslint. 

This does mean we don't have CI to enforce formatting since we only
currently run linting which is now separate. I intend to follow up and
add prettier to CI which should be straightforward.

**Changes**
1. Remove prettier eslint plugin(s)
2. Added `reportUnusedDisableDirectives` to prevent stray disable
directives (tidied them up here too)
3. Added `no-extra-semi` for the moment (it's deprecated and I expect
it'll go away anyway with my further refactoring)
4. Added a lot to the prettier ignore (again mostly just for the moment,
I don't want a pr with meaningful changes flooded with misc prettier
reformatting)
5. Switched the prettier config file to the json format and added
plugins: "prettier-plugin curly", "prettier-plugin-sh",
"prettier-plugin-packagejson"
6. Updated the vscode recommended extensions to include prettier
7. Updated the vscode settings to lint and format on save

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,22 @@
+# Ignore built code
 **/dist
 
-# Do not format Markdown files to allow easier documentation contribution
-*.md
+# Ignore fixture projects
+__fixtures__
 
-/.nx/cache
+# Ignore the docs (docusaurus) project
+docs/
+
+# Ignore the .nx directory
+/.nx
+
+# TODO(jgmw): Is this too broad?
+# Ignore test fixtures
+**/__testfixtures__
+**/__tests__/fixtures
+
+# TODO(jgmw): Re-enable these in managable chunks
+tasks
+.github
+.changesets
+packages/create-redwood-app/tests/e2e_prompts*
