--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "check:package": "nx run-many -t check:package --output-style static",
     "clean:prisma": "rimraf node_modules/.prisma/client && node node_modules/@prisma/client/scripts/postinstall.js",
     "e2e": "node ./tasks/run-e2e",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "generate-dependency-graph": "node ./tasks/generateDependencyGraph.mjs",
     "install:all": "concurrently -g -c auto -n install:fw \"yarn install\" npm:install:crwrsca",
     "install:ci": "concurrently -g -c auto -n install:fw:ci \"yarn install --inline-builds\" npm:install:crwrsca:ci",
@@ -113,6 +115,10 @@
     "npm-packlist": "8.0.2",
     "nx": "19.5.7",
     "ora": "8.0.1",
+    "prettier": "3.3.3",
+    "prettier-plugin-curly": "0.2.2",
+    "prettier-plugin-packagejson": "2.5.1",
+    "prettier-plugin-sh": "0.14.0",
     "prompts": "2.4.2",
     "rimraf": "6.0.1",
     "tstyche": "2.1.1",
