--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -8,8 +8,5 @@
   },
   "include": ["."],
   "exclude": ["dist", "node_modules", "**/__mocks__", "**/__fixtures__"],
-  "references": [
-    { "path": "../framework-tools" },
-    { "path": "../internal" }
-  ]
+  "references": [{ "path": "../framework-tools" }, { "path": "../internal" }]
 }
