--- a/packages/api-server/tsconfig.json
+++ b/packages/api-server/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "emitDeclarationOnly": false,
-    "noEmit": true,
+    "noEmit": true
   },
   "include": ["src", "ambient.d.ts"],
   "references": [
@@ -14,10 +14,5 @@
     { "path": "../web-server" },
     { "path": "../realtime" }
   ],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "**/__mocks__",
-    "**/__tests__/fixtures",
-  ]
+  "exclude": ["dist", "node_modules", "**/__mocks__", "**/__tests__/fixtures"]
 }
