--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -8,7 +8,5 @@
   },
   "inclue": ["."],
   "exclude": ["dist", "node_modules", "**/__mocks__", "**/__fixtures__"],
-  "references": [
-    { "path": "../framework-tools" }
-  ]
+  "references": [{ "path": "../framework-tools" }]
 }
