--- a/packages/cli-helpers/tsconfig.json
+++ b/packages/cli-helpers/tsconfig.json
@@ -11,10 +11,5 @@
     { "path": "../telemetry" },
     { "path": "../project-config" }
   ],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "**/__mocks__",
-    "**/__tests__/fixtures",
-  ]
+  "exclude": ["dist", "node_modules", "**/__mocks__", "**/__tests__/fixtures"]
 }
