--- a/packages/cli/src/commands/setup/docker/templates/docker-compose.prod.yml
+++ b/packages/cli/src/commands/setup/docker/templates/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
     # This is important if you intend to configure GraphQL to use Realtime.
     # command: "./api/dist/server.js"
     ports:
-      - "8911:8911"
+      - '8911:8911'
     depends_on:
       - db
     environment:
@@ -24,7 +24,7 @@ services:
       dockerfile: ./Dockerfile
       target: web_serve
     ports:
-      - "8910:8910"
+      - '8910:8910'
     depends_on:
       - api
     environment:
@@ -37,7 +37,7 @@ services:
       POSTGRES_PASSWORD: redwood
       POSTGRES_DB: redwood
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - ./postgres:/var/lib/postgresql/data
 
@@ -55,7 +55,7 @@ services:
       target: console
     tmpfs:
       - /tmp
-    command: "true"
+    command: 'true'
     environment:
       - DATABASE_URL=postgresql://redwood:redwood@db:5432/redwood
       - TEST_DATABASE_URL=postgresql://redwood:redwood@db:5432/redwood_test
