--- a/.prettierignore
+++ b/.prettierignore
@@ -10,6 +10,9 @@ docs/
 # Ignore the .nx directory
 /.nx
 
+# Ignore create-redwood-rsc-app
+packages/create-redwood-rsc-app
+
 # TODO(jgmw): Is this too broad?
 # Ignore test fixtures
 **/__testfixtures__
