add format check to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,9 @@ jobs:
       - name: 🔎 Lint
         run: yarn lint
 
+      - name: 📝 Formatting
+        run: yarn format:check
+
       - name: 🥡 Check packaging and attw
         run: yarn check:package
 
