--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "dependency-cruiser": "16.3.10",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "3.2.0",
     "execa": "5.1.1",
     "fast-glob": "3.3.2",
