chore(lint): refactor react, react-hooks and ts-eslint usage (#11254)
Changes:
1. Refactors the usage of react and react-hooks plugins
2. Consolidates the ts-eslint plugin usage

--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "@types/jscodeshift": "0.11.11",
     "@types/ncp": "2.0.8",
     "@types/prompts": "2.4.9",
+    "@typescript-eslint/eslint-plugin": "8.1.0",
+    "@typescript-eslint/parser": "8.1.0",
     "all-contributors-cli": "6.26.1",
     "babel-jest": "^29.7.0",
     "babel-plugin-auto-import": "1.1.0",
@@ -99,6 +101,8 @@
     "dependency-cruiser": "16.3.10",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "3.2.0",
     "execa": "5.1.1",
     "fast-glob": "3.3.2",
