--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,3 +1,4 @@
 {
-  "extends": "./tsconfig.compilerOption.json"
+  "extends": "./tsconfig.compilerOption.json",
+  "exclude": ["dist", "node_modules", "**/__mocks__"]
 }
