fix inclusion of tests in tsconfig

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.compilerOption.json",
-  "exclude": ["dist", "node_modules", "**/__mocks__"]
+  "exclude": ["dist", "node_modules", "**/__mocks__"],
+  "include": ["**/*"]
 }
