--- a/.github/actions/set-up-test-project/action.yaml
+++ b/.github/actions/set-up-test-project/action.yaml
@@ -8,7 +8,7 @@ runs:
 inputs:
   canary:
     description: Upgrade the project to canary?
-    default: "false"
+    default: 'false'
 
 outputs:
   test-project-path:
