--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/prompts": "2.4.9",
     "@typescript-eslint/eslint-plugin": "8.1.0",
     "@typescript-eslint/parser": "8.1.0",
+    "@yarnpkg/types": "4.0.0",
     "all-contributors-cli": "6.26.1",
     "babel-jest": "^29.7.0",
     "babel-plugin-auto-import": "1.1.0",
