Try setting prisma override

--- a/packages/uploads/tsconfig.json
+++ b/packages/uploads/tsconfig.json
@@ -7,13 +7,14 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "prisma-override.d.ts"],
+
   "references": [
     {
       "path": "../project-config"
     },
     {
       "path": "../framework-tools"
-    },
+    }
   ]
 }
