--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:test-project": "node ./tasks/test-project/test-project",
     "build:watch": "lerna run build:watch --parallel; tsc --build",
     "changesets": "tsx ./tasks/changesets/changesets.mts",
-    "check": "node ./tasks/check/check.mjs",
+    "check": "cross-env yarn constraints && yarn dedupe --check",
     "check:package": "nx run-many -t check:package --output-style static",
     "clean:prisma": "rimraf node_modules/.prisma/client && node node_modules/@prisma/client/scripts/postinstall.js",
     "e2e": "node ./tasks/run-e2e",
