--- a/packages/graphql-server/package.json
+++ b/packages/graphql-server/package.json
@@ -18,8 +18,8 @@
     "build:types": "tsc --build --verbose",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "jest src",
-    "test:watch": "yarn test --watch"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.25.0",
@@ -56,10 +56,10 @@
     "@types/lodash": "4.17.7",
     "@types/uuid": "10.0.0",
     "@whatwg-node/fetch": "0.9.20",
-    "jest": "29.7.0",
     "jsonwebtoken": "9.0.2",
     "tsx": "4.17.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vitest": "2.0.5"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
 }
