--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -30,7 +30,7 @@
       }
     }
   },
-  "main": "./dist/cjs/index.cjs",
+  "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
