--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,6 +8,7 @@
     "directory": "packages/core"
   },
   "license": "MIT",
+  "type": "module",
   "bin": {
     "cross-env": "./dist/bins/cross-env.js",
     "eslint": "./dist/bins/eslint.js",
@@ -29,9 +30,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "yarn build:js",
-    "build:js": "babel src -d dist --extensions \".js,.jsx,.ts,.tsx\"",
+    "build": "tsx ./build.mts",
     "build:pack": "yarn pack -o redwoodjs-core.tgz",
+    "check:package": "yarn publint",
     "prepublishOnly": "NODE_ENV=production yarn build"
   },
   "dependencies": {
@@ -57,7 +58,10 @@
     "url-loader": "4.1.1"
   },
   "devDependencies": {
-    "@types/lodash": "4.17.7"
+    "@redwoodjs/framework-tools": "workspace:*",
+    "@types/lodash": "4.17.7",
+    "publint": "0.2.10",
+    "tsx": "4.17.0"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
 }
