--- a/packages/auth-providers/dbAuth/api/package.json
+++ b/packages/auth-providers/dbAuth/api/package.json
@@ -7,36 +7,71 @@
     "directory": "packages/auth-providers/dbAuth/api"
   },
   "license": "MIT",
+  "type": "commonjs",
+  "exports": {
+    ".": {
+      "default": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    },
+    "./dist/decoder": {
+      "default": {
+        "types": "./dist/decoder.d.ts",
+        "default": "./dist/decoder.js"
+      }
+    },
+    "./dist/errors": {
+      "default": {
+        "types": "./dist/errors.d.ts",
+        "default": "./dist/errors.js"
+      }
+    },
+    "./dist/shared": {
+      "default": {
+        "types": "./dist/shared.d.ts",
+        "default": "./dist/shared.js"
+      }
+    },
+    "./dist/DbAuthHandler": {
+      "default": {
+        "types": "./dist/DbAuthHandler.d.ts",
+        "default": "./dist/DbAuthHandler.js"
+      }
+    }
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "yarn build:js && yarn build:types",
-    "build:js": "babel src -d dist --extensions \".js,.jsx,.ts,.tsx\" --copy-files --no-copy-ignored",
+    "build": "tsx ./build.mts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-auth-dbauth-api.tgz",
-    "build:types": "tsc --build --verbose",
+    "build:types": "tsc --build --verbose ./tsconfig.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx,template\" --ignore dist --exec \"yarn build\"",
+    "check:attw": "yarn attw -P",
+    "check:package": "concurrently npm:check:attw yarn:publint",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.25.0",
     "@redwoodjs/project-config": "workspace:*",
     "base64url": "3.0.1",
-    "core-js": "3.38.0",
     "md5": "2.3.0",
     "uuid": "10.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.24.8",
-    "@babel/core": "^7.22.20",
+    "@arethetypeswrong/cli": "0.15.4",
     "@redwoodjs/api": "workspace:*",
+    "@redwoodjs/framework-tools": "workspace:*",
     "@simplewebauthn/server": "7.4.0",
     "@types/md5": "2.3.5",
     "@types/uuid": "10.0.0",
+    "concurrently": "8.2.2",
+    "publint": "0.2.10",
+    "tsx": "4.17.0",
     "typescript": "5.5.4",
     "vitest": "2.0.5"
   },
