--- a/packages/internal/package.json
+++ b/packages/internal/package.json
@@ -7,6 +7,7 @@
     "directory": "packages/internal"
   },
   "license": "MIT",
+  "type": "commonjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
@@ -17,12 +18,13 @@
     "dist"
   ],
   "scripts": {
-    "build": "yarn build:js && yarn build:types",
+    "build": "tsx ./build.mts && yarn build:types",
     "build:clean-dist": "rimraf 'dist/**/*/__tests__' --glob",
-    "build:js": "babel src -d dist --extensions \".js,.jsx,.ts,.tsx\" --copy-files --no-copy-ignored && yarn build:clean-dist",
     "build:pack": "yarn pack -o redwoodjs-internal.tgz",
-    "build:types": "tsc --build --verbose",
+    "build:types": "tsc --build --verbose ./tsconfig.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
+    "check:attw": "yarn attw -P",
+    "check:package": "concurrently npm:check:attw yarn:publint",
     "fix:permissions": "chmod +x dist/generate/generate.js dist/generate/watch.js",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
@@ -70,9 +72,12 @@
     "typescript": "5.5.4"
   },
   "devDependencies": {
-    "@babel/cli": "7.24.8",
+    "@arethetypeswrong/cli": "0.15.4",
+    "@redwoodjs/framework-tools": "workspace:*",
     "@types/fs-extra": "11.0.4",
+    "concurrently": "8.2.2",
     "graphql-tag": "2.12.6",
+    "publint": "0.2.10",
     "tsx": "4.17.0",
     "vitest": "2.0.5"
   },
